Table users {
  id integer [primary key]
  username varchar
  role varchar
  email varchar [not null, unique]
  password_hash varchar [not null]
  first_name varchar
  last_name varchar
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Ref: users.id < accounts.user_id

Table accounts {
  id integer [primary key]
  user_id integer [not null]
  name varchar
  description varchar
  type_id integer [not null]
  currency_code varchar [not null]
  created_at timestamp
  updated_at timestamp
}

Ref: accounts.type_id < accounts_types.id

Table accounts_types {
  id integer [primary key]
  name varchar [not null]
  description varchar
  created_at timestamp
}

Table transactions {
  id integer [primary key]
  amount decimal(10, 2) [not null]
  date timestamp [not null]
  account_in_id integer
  account_out_id integer
  type_id integer [not null]
  category_id integer
  description varchar
  created_at timestamp
  updated_at timestamp
}

Ref: transactions.account_in_id < accounts.id
Ref: transactions.account_out_id < accounts.id

Table transaction_categories {
  id integer [primary key]
  name varchar [not null]
  type_id integer [not null]
  color varchar
  icon varchar
  description varchar
  created_at timestamp
}

Ref: transactions.category_id < transaction_categories.id

Table transaction_types {
  id integer [primary key]
  name varchar [not null]
  color varchar
  icon varchar
  description varchar
  created_at timestamp
}

Ref: transactions.type_id < transaction_types.id
Ref: transaction_categories.type_id < transaction_types.id